add btc assignment3

--- a/Bitcoin_and_Cryptocurrency_Technologies/Assignment2/build.gradle
+++ b/Bitcoin_and_Cryptocurrency_Technologies/Assignment2/build.gradle
@@ -1,4 +1,4 @@
-mainClassName = 'com.zjuturtle.bct.assignment2.Simulation'
+mainClassName = 'com.zjuturtle.bct.assignment2.Main'
 
 run {
     args = ["0.1", "0.15", "0.01","10"]
