--- a/Bitcoin_and_Cryptocurrency_Technologies/Assignment3/build.gradle
+++ b/Bitcoin_and_Cryptocurrency_Technologies/Assignment3/build.gradle
@@ -1,5 +1,1 @@
-mainClassName = 'com.zjuturtle.bct.assignment3.Simulation'
-
-run {
-    args = ["0.1", "0.15", "0.01","10"]
-}
+mainClassName = 'com.zjuturtle.bct.assignment3.Main'
